maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:60: error: ':' expected but ',' found.
def caseLibre(x,y):Boolean={
               ^JediEscaper:93: error: identifier expected but ';' found.
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
^